5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1637_2711.log
== TEST (2019-04-09 11:14:04) 
-- CODE:
cash = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de ônibus: "))
vp = int(input("Digite a quantidade de passes de ônibus: "))

if (cash == qnt + vt + passes + vp):
	resp = "SUFICENTE"
	
else:
	resp = "INSUFICIENTE"
	
print(resp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    vp = int(input())
ValueError: invalid literal for int() with base 10: '1.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:14:37) 
-- CODE:
cash = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = int(input("Digite a quantidade de passes de onibus: "))

if (cash == qnt + vt + passes + vp):
	resp = "SUFICENTE"
	
else:
	resp = "INSUFICIENTE"
	
print(resp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    vp = int(input())
ValueError: invalid literal for int() with base 10: '1.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:15:25) 
-- CODE:
cash = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = float(input("Digite o valor dos passes de onibus: "))

if (cash == qnt + vt + passes + vp):
	resp = "SUFICENTE"
	
else:
	resp = "INSUFICIENTE"
	
print(resp)
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:15:56) 
-- CODE:
cash = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = float(input("Digite o valor dos passes de onibus: "))

if (cash > qnt + vt + passes + vp):
	resp = "SUFICENTE"
	
else:
	resp = "INSUFICIENTE"
	
print(resp)
-- OUTPUT:
SUFICENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:15:57) 
-- CODE:
cash = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = float(input("Digite o valor dos passes de onibus: "))

if (cash > qnt + vt + passes + vp):
	resp = "SUFICENTE"
	
else:
	resp = "INSUFICIENTE"
	
print(resp)
-- EXECUTION TIME:
0.153951
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:16:00) 
-- CODE:
cash = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = float(input("Digite o valor dos passes de onibus: "))

if (cash > qnt + vt + passes + vp):
	resp = "SUFICENTE"
	
else:
	resp = "INSUFICIENTE"
	
print(resp)
-- OUTPUT:
SUFICENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:16:14) 
-- CODE:
cash = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = float(input("Digite o valor dos passes de onibus: "))

if (cash > qnt + vt + passes + vp):
	resp = "SUFICENTE"
	
else:
	resp = "INSUFICIENTE"
	
print(resp)
-- EXECUTION TIME:
0.165442
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:16:48) 
-- CODE:
cash = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = float(input("Digite o valor dos passes de onibus: "))

if (cash > qnt + vt + passes + vp):
	resp = "SUFICENTE"
	
else:
	resp = "INSUFICIENTE"
	
print(resp)
-- OUTPUT:
SUFICENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:17:46) 
-- CODE:
cash = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade de tickets que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = float(input("Digite o valor dos passes de onibus: "))

if (cash > qnt * vt + passes * vp):
	resp = "SUFICENTE"
	
else:
	resp = "INSUFICIENTE"
	
print(resp)
-- OUTPUT:
SUFICENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:18:06) 
-- CODE:
cash = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade de tickets que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = float(input("Digite o valor dos passes de onibus: "))

if (cash > qnt * vt + passes * vp):
	resp = "SUFICENTE"
	
else:
	resp = "INSUFICIENTE"
	
print(resp)
-- OUTPUT:
SUFICENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:19:05) 
-- CODE:
cash = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade de tickets que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = float(input("Digite o valor dos passes de onibus: "))

if (cash >= (qnt * vt) + (passes * vp):
	resp = "SUFICENTE"
	
else:
	resp = "INSUFICIENTE"
	
print(resp)
-- ERROR:
File "XXXX", line 7
    if (cash >= (qnt * vt) + (passes * vp):
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:19:09) 
-- CODE:
cash = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade de tickets que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = float(input("Digite o valor dos passes de onibus: "))

if (cash >= (qnt * vt) + (passes * vp)):
	resp = "SUFICENTE"
	
else:
	resp = "INSUFICIENTE"
	
print(resp)
-- OUTPUT:
SUFICENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:19:54) 
-- CODE:
dinheiro = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade de tickets que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = float(input("Digite o valor dos passes de onibus: "))

if (dinheiro >= (qnt * vt) + (passes * vp)):
	resp = "SUFICENTE"
	
else:
	resp = "INSUFICIENTE"
	
print(resp)
-- OUTPUT:
SUFICENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:20:34) 
-- CODE:
dinheiro = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade de tickets que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = float(input("Digite o valor dos passes de onibus: "))

if (dinheiro < (qnt * vt) + (passes * vp)):
	resp = "INSUFICENTE"
	
else:
	resp = "SUFICIENTE"
	
print(resp)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:20:59) 
-- CODE:
dinheiro = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade de tickets que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = float(input("Digite o valor dos passes de onibus: "))

if (dinheiro < (qnt * vt) + (passes * vp)):
	resp = "INSUFICENTE"
	
else:
	resp = "SUFICIENTE"
	
print(resp)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:21:32) 
-- CODE:
dinheiro = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade de tickets que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = float(input("Digite o valor dos passes de onibus: "))

if (dinheiro <= (qnt * vt) + (passes * vp)):
	resp = "INSUFICENTE"
	
else:
	resp = "SUFICIENTE"

print(resp)
-- EXECUTION TIME:
0.155407
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:21:44) 
-- CODE:
dinheiro = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade de tickets que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = float(input("Digite o valor dos passes de onibus: "))

if (dinheiro == (qnt * vt) + (passes * vp)):
	resp = "INSUFICENTE"
	
else:
	resp = "SUFICIENTE"

print(resp)
-- EXECUTION TIME:
0.222952
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:21:49) 
-- CODE:
dinheiro = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade de tickets que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = float(input("Digite o valor dos passes de onibus: "))

if (dinheiro == (qnt * vt) + (passes * vp)):
	resp = "INSUFICENTE"
	
else:
	resp = "SUFICIENTE"

print(resp)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:21:51) 
-- CODE:
dinheiro = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade de tickets que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = float(input("Digite o valor dos passes de onibus: "))

if (dinheiro == (qnt * vt) + (passes * vp)):
	resp = "INSUFICENTE"
	
else:
	resp = "SUFICIENTE"

print(resp)
-- EXECUTION TIME:
0.128247
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:22:21) 
-- CODE:
dinheiro = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade de tickets que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = float(input("Digite o valor dos passes de onibus: "))

if (dinheiro == (qnt * vt) + (passes * vp)):
	resp = "INSUFICENTE"
	
else:
	resp = "SUFICIENTE"

print(resp)
-- EXECUTION TIME:
0.135086
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:23:43) 
-- CODE:
dinheiro = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade de tickets que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = float(input("Digite o valor dos passes de onibus: "))

if (dinheiro<(qnt * vt) + (passes * vp)):
	resp = "INSUFICENTE"
	
else:
	resp = "SUFICIENTE"

print(resp)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:23:45) 
-- CODE:
dinheiro = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade de tickets que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = float(input("Digite o valor dos passes de onibus: "))

if (dinheiro<(qnt * vt) + (passes * vp)):
	resp = "INSUFICENTE"
	
else:
	resp = "SUFICIENTE"

print(resp)
-- EXECUTION TIME:
0.138904
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:34:47) 
-- CODE:
dinheiro = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade de tickets que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = float(input("Digite o valor dos passes de onibus: "))

if (dinheiro <(qnt * vt) + (passes * vp)):
	resp = "INSUFICENTE"
	
else:
	resp = "SUFICIENTE"

print(resp)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:35:17) 
-- CODE:
dinheiro = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade de tickets que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = float(input("Digite o valor dos passes de onibus: "))

if (dinheiro < (qnt * vt) + (passes * vp)):
	resp = "INSUFICENTE"
	
else:
	resp = "SUFICIENTE"

print(resp)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:35:41) 
-- CODE:
dinheiro = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade de tickets que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = float(input("Digite o valor dos passes de onibus: "))

if (dinheiro < (qnt * vt) + (passes * vp)):
	resp = "INSUFICENTE"
	
else:
	resp = "SUFICIENTE"

print(resp)
-- EXECUTION TIME:
0.144795
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:36:44) 
-- CODE:
dinheiro = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade de tickets que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = float(input("Digite o valor dos passes de onibus: "))

if (dinheiro < (qnt * vt) + (passes * vp)):
	print("INSUFICIENTE")
else:
	print("SUFICIENTE")

-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:36:47) 
-- CODE:
dinheiro = float(input("Digite quanto voce possui: "))
qnt = int(input("Digite a quantiade de tickets que voce precisa: ")) 
vt = float(input("Digite o valor do ticket do ru: "))
passes = int(input("Digite a quantidade de passes de onibus: "))
vp = float(input("Digite o valor dos passes de onibus: "))

if (dinheiro < (qnt * vt) + (passes * vp)):
	print("INSUFICIENTE")
else:
	print("SUFICIENTE")

-- EXECUTION TIME:
0.128618
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
